# bu-medialab

./: Bookmarks.md  DesignDocumentDraft.md  ProjectHome.md  README.md  TasksAndPeople.md  geometry.h  vrml_io.cpp
AsymHeadStereoApplication/: a.out  bunny.wrl  geometry.cpp  maymun.wrl  nefertiti.wrl
AsymHeadStereoApplication/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Package-Debug.bash  project.xml
HeadTracker/: HeadTracker.cbp  IOpenCV.h  NOTES ON CAMERA LOCK.txt  Server.h  Server.hpp  StereoAnalyzer.cpp
SM_API/src/: RenderController.cpp  sm_api_dll.h
SM_API/src/core/: box.h  kdtree.cpp  sampler.h  torus.h  twosidedcylinder.cpp
SM_API/src/editing/: EditingCamera.h
SM_API/src/formats/: SMIODevice.h  stldevice.h
SceneModeller/: SceneModeller.sln
SceneModeller/SceneModeller/: SceneModeller.vcproj  centralwidget.h  common.cpp  common.h  exeIcon.aps  main.cpp  renderercontroller.cpp  renderercontroller.ui  resource.h  scenemodeller.h  scenemodeller.ui  style_sheets.txt
SceneModeller/SceneModeller/Camera/: editcamera.cpp  editcamera.h  editcamera.ui
SceneModeller/SceneModeller/Deleted/: ui_extrudedialog_h.bak
SceneModeller/SceneModeller/Resources/: Thumbs.db
SceneModeller/SceneModeller/canvas/: CanvasGrid.cpp  CanvasGrid.h  smcanvaswidget.cpp  smcanvaswidget.h  smcanvaswindow.h
SceneModeller/SceneModeller/core/: bbox.cpp  bbox.h  camera.cpp  camera.h  circle.cpp  circle.h  cone.cpp  cylinder.cpp  cylinder.h  disk.cpp  disk.h  (+30 more)
SceneModeller_API/src/: CanvasGrid.cpp  CanvasGrid.h  RenderController.cpp  RenderController.h  SceneDrawer.cpp  SceneDrawer.h  SceneModeller.cbp  SceneModeller.depend  SceneModeller.layout  SceneModeller.vcproj  common.h  sm_api_dll.h
StereoApp7/: main.cpp
StereoApplication/: vrml_io.h
StereoApplication/nbproject/: Makefile-Debug.mk  Makefile-impl.mk  Package-Release.bash
StereoViewer/: CameraCleanup  HeadTrackerClient.cpp  HeadTrackerClient.h  IGlut.cpp  IGlut.h  StereoVRMLViewer.cbp  common.h  geometry.cpp  geometry.h  i_camera.h  main.cpp  version.h  vrml_io.cpp  vrml_io.h  wiimote.h
StereoViewer/shaders/: Shader.hpp  sv_blur.frag  sv_same.vert
nbproject/: Makefile-Release.mk  configurations.xml
renderer/src/: pbrt-renderer.sln
trunk/AsymHeadStereoApplication/: main.cpp
trunk/HeadTracker/: HeadTracker-d  HeadTracker.cbp  IFiWiCamera.h  IOpenCV.h  IOpenCV.hpp  Server.h  StereoAnalyzer.cpp  StereoAnalyzer.h  main.cpp
trunk/SceneModeller_API/SM_API/src/formats/vrml/: Attribute.cc  Cone.cc  Coordinate3.cc  Cylinder.cc  Cylinder.hh  DirectionalLight.hh  Document.hh  Driver.hh  IndexedFaceSet.cc  Makefile.am  Material.cc  Node.cc  NormalBinding.cc  PerspectiveCamera.cc  PointLight.hh  Rotation.cc  Route.h  SFBool.h  SFImage.cc  SFMatrix.cc  SFVec2f.hh  SFVec3f.cc  Sphere.hh  SpotLight.cc  SubStack.cc  Switch.hh  Texture2.hh  Texture2Transform.hh  TextureCoordinate2.cc  TextureCoordinate2.hh  Transform.hh  Translation.cc  stack.hh  vrml.tab.cpp  vrml.y  vrml1-parser.yy  vrml1-scanner.ll
trunk/StereoApplication/: main.cpp
trunk/StereoViewer/: HeadTrackerClient.cpp  HeadTrackerClient.h  IFiWiCamera.h  IGlut.cpp  IGlut.h  IOpenCV.h  StereoAnalyzer.h  StereoVRMLViewer.cbp  bunny.wrl  common.h  geometry.cpp  geometry.h  i_camera.h  main.cpp  version.h  vrml_io.cpp  wiimote.h
trunk/nbproject/: Package-Debug.bash  project.xml
wiki/: Bookmarks.wiki  DesignDocumentDraft.wiki  TasksAndPeople.wiki
(+765 files in other folders)
